--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -8,6 +8,7 @@
     font-family: "Inika", serif;
     font-weight: 400;
     font-style: normal;
+    font-size: 35px;
     color: #8B7969;
     text-align: center;
 }
@@ -21,25 +22,31 @@
 .form__group {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     color: #8B7969;
+}
+
+.form__group-title {
+    width: 30%;
+    text-align: left;
+}
+
+.form__label--item {
+    font-size: 20px;
 }
 
 .form__label--required {
     color: #FF9F9F;
+    font-size: 20px;
 }
 
 .form__error {
     color: #FF9F9F;
 }
 
-.form__group-title {
-    width: 20%;
-    text-align: left;
-}
 
 .form__group-content {
-    width: 70%;
+    width: 60%;
     text-align: left;
 }
 
@@ -133,6 +140,7 @@
     display: flex;
     align-items: center;
     position: absolute;
+    width: 50%;
 }
 
 .form__input--category select {
@@ -143,15 +151,30 @@
     border: none;
     outline: none;
     cursor: pointer;
+    width: 50%;
 }
 
 .form__input--category::after {
     position: relative;
-    right: 15px;
-    width: 10px;
-    height: 7px;
+    right: 20px;
+    width: 15px;
+    height: 10px;
     clip-path: polygon(0 0, 100% 0, 50% 100%);
     content: "";
     background-color: #8B7969;
     pointer-events: none;
+}
+
+.form__button {
+    margin-top: 30px;
+}
+
+.form__button--submit {
+    appearance: none;
+    border: none;
+    padding: 8px 25px;
+    color: #fff;
+    background-color: #82756A;
+    font-size: 20px;
+    cursor: pointer;
 }
