お問い合わせフォーム関連いったん終了

--- a/src/public/css/admin-layout.css
+++ b/src/public/css/admin-layout.css
@@ -20,7 +20,7 @@
     text-decoration: none;
 }
 
-/* 追加したが、いまいちうまくいかないのでいったんコメントアウト管理画面などは別でレイアウト作ったほうがいいか？=>admin-layoutで作成中
+/* 追加したが、いまいちうまくいかないのでいったんコメントアウト管理画面などは別でレイアウト作ったほうがいいか？
 .header__button {
     width: 100px;
     height: 34px;
